# lexograph

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CHANGES_SUMMARY.md  LICENSE  MUTATION-TESTING.md  Makefile  PRE-MORTEM.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: index.md  quickstart.md  troubleshooting.md
docs/api/: analyze.md  channels.md  concordance.md  datasets.md  layout.md  punctuation_spiral.md  recurrence.md  render.md  scalars.md  segment.md  spiral.md  text_walk.md  walk.md  walk3d.md  widths.md
docs/examples/: concordance.md  graph_analysis.md  punctuation_spiral.md  recurrence.md  spine_demo.md  text_walk.md  text_walk_3d.md
docs/tutorials/: the_spine.md
examples/: concordance_demo.py  graph_analysis_demo.py  punctuation_spiral_demo.py  recurrence_demo.py  spine_demo.py  text_walk_3d_demo.py  text_walk_demo.py
src/lexograph/: __init__.py  _types.py  scalars.py
src/lexograph/analyze/: __init__.py  backbone.py  embeddings.py  graph.py
src/lexograph/datasets/: __init__.py  _pride_and_prejudice.py
src/lexograph/encode/: __init__.py  channels.py
src/lexograph/io/: __init__.py
src/lexograph/layout/: __init__.py  dispersion.py  linear.py  recurrence.py  spiral.py  walk.py  walk3d.py  widths.py
src/lexograph/presets/: __init__.py  concordance.py  punctuation_spiral.py  recurrence.py  text_walk.py
src/lexograph/render/: __init__.py  mpl.py  mpl3d.py
src/lexograph/segment/: __init__.py  units.py
tests/: conftest.py  strategies.py  test_analyze.py  test_channels.py  test_datasets.py  test_dispersion.py  test_geometry.py  test_linear.py  test_package.py  test_presets.py  test_recurrence.py  test_render.py  test_render3d.py  test_scalars.py  test_segment.py  test_spine.py  test_spiral.py  test_walk.py  test_walk3d.py  test_widths.py
